--- a/wave_android_uitest/Resources/layout/activity.xml
+++ b/wave_android_uitest/Resources/layout/activity.xml
@@ -5,9 +5,10 @@
     android:id="@+id/activity_root"
     android:minWidth="25px"
     android:minHeight="25px">
-    <TextView
-        android:text="Activity Screen"
+    <ListView
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView1" />
+        android:layout_height="match_parent"
+        android:id="@+id/listView1" />
 </LinearLayout>
