--- a/wave_android_uitest/Resources/layout/activity.xml
+++ b/wave_android_uitest/Resources/layout/activity.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:id="@+id/activity_root"
     android:minWidth="25px"
     android:minHeight="25px">
-    <ListView
-        android:minWidth="25px"
-        android:minHeight="25px"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/listView1" />
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+		android:id="@+id/activity_pager"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent">
+   	</android.support.v4.view.ViewPager>
 </LinearLayout>
