--- a/wave_android_uitest/Resources/layout/activity_list_item.xml
+++ b/wave_android_uitest/Resources/layout/activity_list_item.xml
@@ -8,14 +8,14 @@
         android:src="@drawable/excl_triangle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/activity_image"
+        android:id="@+id/activity_limage"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true" />
     <ImageView
         android:src="@drawable/down_arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/drop_arrow"
+        android:id="@+id/activity_rimage"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true" />
     <TextView
@@ -23,9 +23,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/activity_text"
-        android:layout_toRightOf="@id/activity_image"
+        android:layout_toRightOf="@id/activity_limage"
         android:gravity="center"
         android:layout_centerInParent="true"
         android:inputType="none"
-        android:layout_toLeftOf="@id/drop_arrow" />
+        android:layout_toLeftOf="@id/activity_rimage" />
 </RelativeLayout>
