--- a/wave_android_uitest/Resources/layout/my_life.xml
+++ b/wave_android_uitest/Resources/layout/my_life.xml
@@ -206,61 +206,70 @@
                 android:gravity="right" />
         </RelativeLayout>
     </RelativeLayout>
-    <RelativeLayout
+    <ViewSwitcher
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/my_life_pager_parent"
+        android:id="@+id/my_life_calendar_switcher"
         android:layout_below="@id/my_life_opponent_layout">
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/my_life_month_bar"
-            android:paddingTop="4dip"
-            android:paddingRight="8dip"
-            android:paddingBottom="4dip"
-            android:paddingLeft="8dip"
-            android:layout_alignParentTop="true">
-            <ImageView
-                android:src="@drawable/arrow_filled"
-                android:layout_width="24.6dp"
-                android:layout_height="16.9dp"
-                android:id="@+id/my_life_lt_arrow"
-                android:scaleType="centerInside"
-                android:rotationY="180.0" />
-            <TextView
+            android:id="@+id/my_life_pager_parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:id="@+id/my_life_month_bar"
+                android:paddingTop="4dip"
+                android:paddingRight="8dip"
+                android:paddingBottom="4dip"
+                android:paddingLeft="8dip"
+                android:layout_alignParentTop="true">
+                <ImageView
+                    android:src="@drawable/arrow_filled"
+                    android:layout_width="24.6dp"
+                    android:layout_height="16.9dp"
+                    android:id="@+id/my_life_lt_arrow"
+                    android:scaleType="centerInside"
+                    android:rotationY="180.0" />
+                <TextView
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:id="@+id/my_life_newer_text"
+                    android:text="Newer"
+                    android:layout_gravity="left"
+                    android:textColor="@android:color/black" />
+                <TextView
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
+                    android:id="@+id/my_life_month_text"
+                    android:text="JULY"
+                    android:layout_weight="0.5"
+                    android:gravity="center"
+                    android:textColor="@android:color/white" />
+                <TextView
+                    android:layout_height="match_parent"
+                    android:layout_width="wrap_content"
+                    android:id="@+id/my_life_older_text"
+                    android:text="Older"
+                    android:layout_gravity="right"
+                    android:textColor="@android:color/black" />
+                <ImageView
+                    android:src="@drawable/arrow_filled"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/my_life_gt_arrow" />
+            </LinearLayout>
+            <ViewFlipper
+                android:id="@+id/my_life_pager"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_width="wrap_content"
-                android:id="@+id/my_life_newer_text"
-                android:text="Newer"
-                android:layout_gravity="left"
-                android:textColor="@android:color/black" />
-            <TextView
-                android:layout_height="match_parent"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center"
-                android:id="@+id/my_life_month_text"
-                android:text="JULY"
-                android:layout_weight="0.5"
-                android:gravity="center"
-                android:textColor="@android:color/white" />
-            <TextView
-                android:layout_height="match_parent"
-                android:layout_width="wrap_content"
-                android:id="@+id/my_life_older_text"
-                android:text="Older"
-                android:layout_gravity="right"
-                android:textColor="@android:color/black" />
-            <ImageView
-                android:src="@drawable/arrow_filled"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/my_life_gt_arrow" />
-        </LinearLayout>
-        <ViewFlipper
-            android:id="@+id/my_life_pager"
+                android:layout_below="@id/my_life_month_bar" />
+        </RelativeLayout>
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/my_life_month_bar" />
-    </RelativeLayout>
+            android:id="@+id/my_life_stats_parent" />
+    </ViewSwitcher>
 </RelativeLayout>
