--- a/wave_android_uitest/Resources/layout/splash.xml
+++ b/wave_android_uitest/Resources/layout/splash.xml
@@ -1,27 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:id="@+id/root"
-    android:orientation="vertical">
-    <LinearLayout
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
-	    android:id="@+id/splash"
-	    android:orientation="vertical">
-	    <ImageView
-	        android:src="@drawable/u23"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:id="@+id/logo"
-	        android:layout_weight="1"
-	        android:layout_gravity="top" />
-	    <ImageView
-	        android:src="@drawable/Icon"
-	        android:layout_width="match_parent"
-	        android:layout_height="1.3dp"
-	        android:id="@+id/spinner"
-	        android:layout_weight="1"
-	        android:layout_gravity="bottom" />
-   </LinearLayout>
-</LinearLayout>
+    android:id="@+id/splash_root"
+    android:minWidth="25px"
+    android:minHeight="25px"
+    android:background="@drawable/SplashMovo">
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/splash_spinner"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100dip" />
+</RelativeLayout>
