people ui still a bit of a work in progress

--- a/wave_android_uitest/Resources/layout/user_row.xml
+++ b/wave_android_uitest/Resources/layout/user_row.xml
@@ -47,13 +47,13 @@
             android:src="@android:drawable/ic_menu_gallery"
             android:id="@+id/user_row_check"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="5dip" />
         <ImageView
             android:src="@android:drawable/ic_menu_gallery"
             android:id="@+id/user_row_x"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dip" />
     </LinearLayout>
     <TextView
