--- a/wave_android_uitest/Resources/layout/challenges.xml
+++ b/wave_android_uitest/Resources/layout/challenges.xml
@@ -8,7 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:id="@+id/challenges_header_layout">
+        android:id="@+id/challenges_header_layout"
+        android:paddingTop="7dip"
+        android:paddingBottom="7dip">
         <TextView
             android:text="challenges"
             android:layout_width="wrap_content"
