--- a/wave_android_uitest/Resources/layout/new_challenge.xml
+++ b/wave_android_uitest/Resources/layout/new_challenge.xml
@@ -8,23 +8,74 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/new_challenge_header">
-        <ImageView
+        android:id="@+id/new_challenge_header"
+        android:paddingTop="7dip">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:minWidth="25px"
+            android:minHeight="25px"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/new_challenge_header_back_arrow"
+            android:id="@+id/new_challenge_header_back_container"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/arrow_filled"
-            android:scaleX="0.5"
-            android:scaleY="0.5"
-            android:rotationY="180.0" />
-        <TextView
-            android:layout_width="match_parent"
+            android:clickable="true"
+            android:descendantFocusability="blocksDescendants">
+            <ImageView
+                android:id="@+id/new_challenge_header_back_arrow"
+                android:src="@drawable/arrow_filled"
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                android:rotationY="180.0"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+            <TextView
+                android:id="@+id/new_challenge_header_back"
+                android:text="Back"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:minWidth="25px"
+            android:minHeight="25px"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/new_challenge_header_next_container"
+            android:layout_alignParentRight="true"
+            android:clickable="true"
+            android:descendantFocusability="blocksDescendants">
+            <TextView
+                android:id="@+id/new_challenge_header_next"
+                android:text="Next"
+                android:gravity="center"
+                android:textColor="@android:color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+            <ImageView
+                android:id="@+id/new_challenge_header_next_arrow"
+                android:src="@drawable/arrow_filled"
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/new_challenge_header_title"
+            android:layout_alignParentTop="true"
+            android:text="new challenge"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:layout_toRightOf="@id/new_challenge_header_back_container"
+            android:layout_toLeftOf="@id/new_challenge_header_next_container"
+            android:textColor="@android:color/black"
+            android:padding="7dip" />
+        <TextView
             android:id="@+id/new_challenge_header_subtitle"
             android:text="choose your opponent"
-            android:layout_below="@id/new_challenge_header_back_arrow"
             android:inputType="none"
             android:gravity="center_vertical"
             android:textAllCaps="true"
@@ -32,52 +83,10 @@
             android:paddingBottom="5dip"
             android:paddingLeft="5dip"
             android:background="@android:color/black"
-            android:textColor="@android:color/white" />
-        <TextView
-            android:layout_width="wrap_content"
+            android:textColor="@android:color/white"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/new_challenge_header_back"
-            android:layout_toRightOf="@id/new_challenge_header_back_arrow"
-            android:layout_alignParentTop="true"
-            android:text="Back"
-            android:layout_above="@id/new_challenge_header_subtitle"
-            android:layout_centerVertical="true"
-            android:gravity="center"
-            android:textColor="@android:color/black" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/new_challenge_header_next_arrow"
-            android:layout_alignParentTop="true"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/arrow_filled"
-            android:scaleX="0.5"
-            android:scaleY="0.5"
-            android:layout_above="@id/new_challenge_header_subtitle" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/new_challenge_header_next"
-            android:layout_alignParentTop="true"
-            android:text="Next"
-            android:layout_above="@id/new_challenge_header_subtitle"
-            android:gravity="center"
-            android:layout_toLeftOf="@id/new_challenge_header_next_arrow"
-            android:textColor="@android:color/black" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/new_challenge_header_title"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"
-            android:text="new challenge"
-            android:gravity="center"
-            android:textAllCaps="true"
-            android:layout_toRightOf="@id/new_challenge_header_back"
-            android:layout_above="@id/new_challenge_header_subtitle"
-            android:layout_toLeftOf="@id/new_challenge_header_next"
-            android:textColor="@android:color/black" />
+            android:layout_below="@id/new_challenge_header_back_container" />
     </RelativeLayout>
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
