--- a/wave_android_uitest/Resources/layout/people.xml
+++ b/wave_android_uitest/Resources/layout/people.xml
@@ -23,8 +23,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/people_header_search"
-            android:text="Search"
+            android:id="@+id/people_header_request"
+            android:text="+Friend"
             android:layout_toRightOf="@id/people_header_title"
             android:layout_alignParentRight="true"
             android:gravity="right"
@@ -33,7 +33,8 @@
             android:paddingRight="5dip"
             android:paddingBottom="5dip"
             android:paddingLeft="5dip"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/black"
+            android:clickable="true" />
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
